# rko

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: CI.yml
cmake/: kernel_module.cmake
docs/: Dev.md
docs/bugs/: bnd-winmd-bitfield-enum.md  bnd-winmd-cacheline-alignment.md  bnd-winmd-debugging.md  bnd-winmd-inject-types.md  bnd-winmd-multi-header-wrapper.md  bnd-winmd-unresolved-types.md  rofs-alignment.md
docs/design/: Bindings.md  Kbuild.md  Partitions.md  WIP.md
docs/design/bugs/: bool-recursive-type-alias.md  fn-pointer-struct-field-as-isize.md  int128-mapped-to-isize.md  phys-addr-wrong-size.md
docs/design/features/: build-infra.md  fs.md  kvec.md  module-macro.md  networking.md  printk-macros.md  qemu-test.md  rofs.md  test-framework.md
docs/design/features/futures/: io-uring-cmd.md  io-uring-http-api.md  io-uring-pkt-tx.md  raw-ethernet.md
docs/design/features/impl/: http.md  io-uring-cmd.md  io-uring-http-api.md
docs/guides/: adding-bindings.md
docs/patches/: netdev0x17.diff  vfs.patch
rko-core/: Cargo.toml
rko-core/src/: error.rs  io_uring.rs  iov.rs  kunit.rs  lib.rs  miscdevice.rs  module.rs  prelude.rs  printk.rs  revocable.rs  task.rs  time.rs  unsafe_list.rs  user.rs  workqueue.rs
rko-core/src/alloc/: allocator.rs  kbox.rs  kvec.rs  layout.rs  memcache.rs  mod.rs
rko-core/src/fs/: dentry.rs  dir.rs  file.rs  folio.rs  inode.rs  iomap.rs  mapper.rs  mod.rs  registration.rs  sb.rs  vtable.rs
rko-core/src/kasync/: mod.rs  oneshot.rs
rko-core/src/kasync/executor/: mod.rs  workqueue.rs
rko-core/src/kasync/net/: mod.rs
rko-core/src/net/: addr.rs  mod.rs  namespace.rs  tcp.rs
rko-core/src/sync/: arc.rs  completion.rs  condvar.rs  mod.rs  nowaitlock.rs  oneshot.rs  rcu.rs  refcount.rs
rko-core/src/sync/lock/: mod.rs  mutex.rs  spinlock.rs
rko-core/src/types/: aref.rs  cstring.rs  foreign_ownable.rs  le.rs  locked.rs  mod.rs  opaque.rs  scope_guard.rs
rko-macros/: Cargo.toml
rko-macros/src/: from_bytes.rs  lib.rs  rko_tests.rs  vtable.rs
rko-sys/: Cargo.toml
rko-sys-gen/: Cargo.toml  rko.toml
rko-sys-gen/src/: lib.rs  main.rs
rko-sys/src/: _helpers_mod.c  helpers.c  helpers.h  lib.rs  module.rs  printk.rs
rko-sys/src/rko/: mod.rs
rko-sys/src/rko/cred/: mod.rs
rko-sys/src/rko/dcache/: mod.rs
rko-sys/src/rko/ds/: mod.rs
rko-sys/src/rko/err/: mod.rs
rko-sys/src/rko/fs/: mod.rs
rko-sys/src/rko/fs_context/: mod.rs
rko-sys/src/rko/gfp/: mod.rs
rko-sys/src/rko/helpers/: mod.rs
rko-sys/src/rko/highmem/: mod.rs
rko-sys/src/rko/io_uring/: mod.rs
rko-sys/src/rko/iomap/: mod.rs
rko-sys/src/rko/kunit/: mod.rs
rko-sys/src/rko/misc/: mod.rs
rko-sys/src/rko/mm_types/: mod.rs
rko-sys/src/rko/net/: mod.rs
rko-sys/src/rko/pagemap/: mod.rs
rko-sys/src/rko/poll/: mod.rs
rko-sys/src/rko/slab/: mod.rs
rko-sys/src/rko/statfs/: mod.rs
rko-sys/src/rko/sync/: mod.rs
rko-sys/src/rko/types/: mod.rs
rko-sys/src/rko/wait/: mod.rs
rko-sys/src/rko/workqueue/: mod.rs
rko-sys/src/rko/xattr/: mod.rs
rko-sys/winmd/: rko-sys.winmd
rko-test-uring/: Cargo.toml
rko-test-uring/src/: main.rs
rko-util/: Cargo.toml
rko-util/src/: lib.rs
rko-util/src/http/: buf_reader.rs  client.rs  error.rs  header.rs  headers.rs  method.rs  mod.rs  parse.rs  request.rs  response.rs  server.rs  status.rs  uring.rs  version.rs  wire.rs
samples/: .gitignore  Cargo.toml  cargo-kernel.toml
samples/async_echo/: CMakeLists.txt  Cargo.toml  async_echo.rs  test.sh
samples/ext2/: CMakeLists.txt  Cargo.toml  defs.rs  ext2.rs  mkimage.py  test.sh
samples/hello/: CMakeLists.txt  Cargo.toml  Kbuild  Makefile  cargo-kernel.toml  hello.rs
samples/hello/.cargo/: config.toml
samples/http_uring/: CMakeLists.txt  Cargo.toml  http_uring.rs  test.sh
samples/kunit_tests/: CMakeLists.txt  Cargo.toml  kunit_tests.rs  test.sh
samples/kunit_tests/tests/: arc.rs  async_echo.rs  async_oneshot.rs  completion.rs  error.rs  executor.rs  foreign_ownable.rs  http.rs  http_integration.rs  ktime.rs  kvec.rs  memcache.rs  oneshot.rs  refcount.rs  revocable.rs  unsafe_list.rs  workqueue.rs
samples/kvec_test/: CMakeLists.txt  Cargo.toml  Kbuild  Makefile  kvec_test.rs
samples/rofs_test/: CMakeLists.txt  Cargo.toml  rofs_test.rs  seek_test.c  test.sh
samples/tarfs/: CMakeLists.txt  Cargo.toml  defs.rs  mkimage.py  tarfs.rs  test.sh
samples/tcp_echo/: CMakeLists.txt  Cargo.toml  tcp_echo.rs  test.sh
samples/workqueue_test/: CMakeLists.txt  Cargo.toml  workqueue_test.rs
scripts/: init-kvec-test.sh  init.sh  make-initramfs.sh  run-module-test.sh  run-qemu-test.sh
