[package]
name = "rko-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-link.workspace = true

[features]
default = ["types", "err", "gfp", "slab", "sync", "fs", "fs_context", "dcache", "pagemap", "highmem", "helpers"]
Foundation = []
# generated features
types = ["Foundation"]
err = ["Foundation"]
gfp = ["Foundation"]
slab = ["Foundation", "types"]
sync = ["Foundation"]
fs = ["Foundation", "types", "sync"]
fs_context = ["Foundation", "sync"]
dcache = ["Foundation", "sync"]
pagemap = ["Foundation"]
highmem = ["Foundation"]
helpers = ["Foundation"]
