[package]
name = "rko-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-link.workspace = true

[features]
default = ["types", "err", "gfp", "slab", "sync", "wait", "mm_types", "cred", "ds", "fs", "fs_context", "dcache", "pagemap", "highmem", "statfs", "xattr", "iomap", "helpers", "net", "workqueue", "poll"]
Foundation = []
# generated features
types = ["Foundation"]
err = ["Foundation"]
gfp = ["Foundation"]
slab = ["Foundation", "types"]
sync = ["Foundation"]
wait = ["Foundation", "sync"]
mm_types = ["Foundation", "types", "sync"]
cred = ["Foundation", "types"]
ds = ["Foundation", "types", "sync"]
fs = ["Foundation", "types", "sync", "wait", "mm_types", "cred", "ds"]
fs_context = ["Foundation", "sync"]
dcache = ["Foundation", "sync"]
pagemap = ["Foundation", "mm_types"]
highmem = ["Foundation"]
statfs = ["Foundation", "types"]
xattr = ["Foundation", "dcache", "fs", "types"]
iomap = ["Foundation", "dcache", "fs", "mm_types", "sync", "types"]
helpers = ["Foundation"]
net = ["Foundation", "types", "sync"]
workqueue = ["Foundation", "sync"]
poll = ["Foundation"]
